# Contacts-site-FastApi

./: main.py  pyproject.toml  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 31616aaf4f32_add_confirmed_field.py  3275f116bf8c_update.py  4e2b7338308f_update_user.py  61e13412bdef_changed_birthday_param.py  8ab867fa9bc1_add_confirmed_field.py  fd48417c2a55_init.py
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
tests/: conftest.py  test_route_auth.py  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
